# chatgpt-telegram-bot

./: .gitignore  README.md  bot.example.toml  flake.nix  main.py  pyproject.toml
.github/workflows/: check.yaml
chatgpt_telegram_bot/: __main__.py  main.py  richtext.py
nix/: pkg.nix  service.nix
